--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
+    "linkifyjs": "^4.3.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
